button for expanding/collapsing top menu, fixes #8
- introduce `$top-menu-collapse` flag and `$top-menu-collapse-breakpoint` variable
- add TopMenuCollapse.js script
- new base64 encoded images: arrow-up and arrow-down (white colored)

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -17,6 +17,7 @@ $use-font-awesome:              true !default;
 $issue-subject-large:           true !default;
 $enable-sidebar-toggler:        true !default;
 $wiki-page-more-vertical-space: true !default;
+$top-menu-collapse:             false !default;
 
 
 //== Colors
@@ -72,8 +73,9 @@ $font-family-base:              $font-family-sans-serif !default;
 $font-size-base:                14px !default;
 $font-size-large:               1.285em !default;
 $font-size-large-px:            18px !default;
-$font-size-small:               .86em !default;
-$font-size-small-px:            12px !default;
+$font-size-small-unitless:      .86 !default;
+$font-size-small:               $font-size-small-unitless * 1em !default;
+$font-size-small-px:            floor($font-size-small-unitless * $font-size-base) !default;
 
 $font-size-h1:                  2.25em !default;
 $font-size-h2:                  1.75em !default;
@@ -465,6 +467,8 @@ $screen-lg-min:                 $screen-lg !default;
 $screen-xs-max:                 ($screen-sm-min - 1) !default;
 $screen-sm-max:                 ($screen-md-min - 1) !default;
 $screen-md-max:                 ($screen-lg-min - 1) !default;
+
+$top-menu-collapse-breakpoint:  $screen-lg-min !default;
 
 
 //== Content widths
